Major update: Professional webpage with enhanced features, methodology section, publications, and improved UI/UX

--- a/landing.html
+++ b/landing.html
@@ -34,7 +34,11 @@
             </div>
         </div>
         <div class="hero-visual">
-            <img src="experiment-lab.gif" alt="Chemistry Lab Experiment" class="hero-gif">
+            <div class="floating-molecules">
+                <div class="molecule">🧪</div>
+                <div class="molecule">⚗️</div>
+                <div class="molecule">🔬</div>
+            </div>
         </div>
     </section>
 
